--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vtaits/react-color-picker": "^0.1.3",
     "ag-grid-community": "^29.2.0",
     "ag-grid-react": "^29.2.0",
+    "antd": "^5.7.3",
     "apexcharts": "3.30.0",
     "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
@@ -92,6 +93,7 @@
     "simplebar-react": "^2.3.6",
     "slick-carousel": "^1.8.1",
     "smart-webcomponents-react": "^15.0.3",
+    "styled-components": "^6.0.5",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
